# rust_template

./: .gitignore  AGENTS.md  Cargo.toml  FEEDBACK.md  Makefile  README.md
.github/workflows/: ci.yml
assets/icons/: README.md
assets/symbols/: README.md
resources/macos/: README.md
scripts/: build_macos_app.sh  check.sh  generate_default_icon.swift  make_icns.sh  setup.sh
src/: main.rs
